# DOCSHIELD

Downloads/docsecure web/: .env.example  .gitignore  DEBUG_FIXES_SUMMARY.md  DEPLOYMENT.md  DEPLOY_PYTHONANYWHERE.md  DEPLOY_RAILWAY.md  DEPLOY_RENDER.md  DOCUMENT_SECURER_WEB.py  GITHUB_PUSH_SETUP.md  LICENSE  Procfile  QR_DETECTION_FIX.md  QR_PUBLIC_SCANNING.md  QUICK_DEPLOY.md  README.md  READY_TO_DEPLOY.md  RENDER_FIX_SUMMARY.md  RENDER_ROOT_DIR.md  app.py  build.sh  pyproject.toml  render.yaml  requirements.txt  test_qr_detection.py
