[tool.poetry]
name = "docshield"
version = "1.0.0"
description = "Enterprise document security and verification system"
authors = ["PHILANI"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.0"
Flask-CORS = "4.0.0"
qrcode = { extras = ["pil"], version = "7.4.2" }
opencv-python = "4.8.1.78"
pyzbar = "1.1.1"
Pillow = "10.1.0"
numpy = "1.24.3"
PyMuPDF = "1.23.8"
scipy = "1.11.4"
cryptography = "41.0.7"
psycopg2-binary = "2.9.9"
GitPython = "3.1.40"
gunicorn = "21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
