[tool.poetry]
name = "docshield"
version = "1.0.0"
description = "Enterprise document security and verification system"
authors = ["PHILANI"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.0"
Flask-CORS = "4.0.0"
qrcode = { extras = ["pil"], version = "7.4.2" }
opencv-python = "4.10.0.84"
pyzbar = "0.1.9"
Pillow = "11.0.0"
numpy = ">=2.0.0"
PyMuPDF = "1.24.0"
scipy = ">=1.14.0"
cryptography = ">=42.0.0"
psycopg2-binary = ">=2.9.9"
GitPython = ">=3.1.40"
gunicorn = "21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
